--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./tab-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Giriş | SOCAR</title>
+    <title>İmtahan Mərkəzi | SOCAR</title>
   </head>
   <body>
     <div id="root"></div>
